2004-07-25  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.ac: bump version to 0.2

	* System_SDL/system_main.c (system_VBL): update screen if
	frameskip_count > frame skip also.  fixes screen freeze when frame
	skip is decremented.

	* System_SDL/system_rc.c (system_rc_read_file): fix osd_colour
	parsing.

2004-07-25  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* System_SDL/NeoPop-SDL.mdoc: Update descriptions for F3/F4 and
	F12.
	* System_SDL/NeoPop-SDL.man: regen.
	
	* System_SDL/system_io.c (system_make_file_name): use ".ext"
	instead of "ext" for system_make_file_name so it's usable for
	screenshot saving; adapt callers.

	* System_SDL/system_screenshot.c (get_screenshot_name): un-regress
	numbered screenshots.

2004-07-24  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* System_SDL/system_osd.c (osd_init, display_string,
	string_width), System_SDL/system_main (main), System_SDL/system_rc
	(system_rc_read_file), font.xpm, NeoPop-SDL.h, neopoprc.mdoc: use
	proportional font with black border and transparent background.
	make colour configurable via config file.
	
2004-07-22  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* System_SDL/system_main.c (main): print error message and exit
	for illegal option arguments.
	
	* System_SDL/system_screenshot.c (get_screenshot_name): make
	directories used configurable, allow use of file name rather than
	ROM name to derive file to use.
	
	* System_SDL/system_io.c (validate_dir): create all non-existing
	components of directory, not only last.

2004-07-22  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* NeoPop-SDL.mdoc: update.  * neopoprc.mdoc: add.

2004-07-21  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* System_SDL/system_graphics.c (system_graphics_update),
	System_SDL/system_hq_intern.h, System_SDL/system_hq2x.c,
	System_SDL/system_hq2x.h, System_SDL/system_hq3x.c,
	System_SDL/system_hq3x.h: add HQ2x/HQ3x scaler (from scummvm).

2004-07-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>
	