@@ -1,4 +1,4 @@
-.\" $NiH: NeoPop-SDL.mdoc,v 1.18 2004/07/25 10:47:27 wiz Exp $
+.\" $NiH: NeoPop-SDL.mdoc,v 1.19 2004/07/25 10:58:42 wiz Exp $
 .\"
 .\" Copyright (c) 2003, 2004 Thomas Klausner and Dieter Baron.
 .\" All rights reserved.
@@ -300,10 +300,6 @@ and
 provided the HQx scaling routines.
 .Sh BUGS
 Network play does not work.
-.Pp
-.Nm
-crashes if it tries to use YUV overlay but another application is
-already using an YUV overlay.
 .Pp
 Also, please see the
 .Pa DOCDIR/bugs-core.html
